--- a/.github/workflows/ai_code_review_gemini.yml
+++ b/.github/workflows/ai_code_review_gemini.yml
@@ -1,25 +1,17 @@
 name: Gemini AI Code Reviewer
-
 on:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
-
 permissions:
   contents: read
   pull-requests: write
-
 jobs:
   gemini_review:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
-
-      - name: Review PR diff with Gemini and comment on PR
+      - name: Comment on PR using Gemini
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -27,53 +19,21 @@ jobs:
           REPO: ${{ github.repository }}
         run: |
           set -euo pipefail
-
-          echo "Fetching diff for PR #$PR_NUMBER ..."
           DIFF="$(curl -sS -L \
             -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3.diff" \
             "https://api.github.com/repos/$REPO/pulls/$PR_NUMBER")"
-
-          # Limita tamanho
-          DIFF_TRUNC="$(echo "$DIFF" | head -c 12000)"
-
-          PROMPT="Você é um revisor de código focado em segurança.
-Analise APENAS o diff abaixo e identifique vulnerabilidades reais (principalmente SQL Injection, XSS, Command Injection, SSRF, Hardcoded secrets).
-Se encontrar algo, explique:
-1) Onde está (arquivo/trecho)
-2) Por que é vulnerabilidade
-3) Como explorar (em alto nível)
-4) Como corrigir (com exemplo de código seguro)
-Se não encontrar, diga: Nenhuma vulnerabilidade clara encontrada no diff.
-
-DIFF:"
-
-          BODY="$(jq -n --arg p "$PROMPT" --arg d "$DIFF_TRUNC" '{
-            contents: [
-              { role: "user", parts: [ { text: ($p + "\n" + $d) } ] }
-            ],
-            generationConfig: { temperature: 0.2, maxOutputTokens: 700 }
+          BODY="$(jq -n --arg d "$(echo "$DIFF" | head -c 12000)" '{
+            contents: [{role:"user", parts:[{text:("Analise o diff e aponte vulnerabilidades reais (SQLi, XSS, etc). Diff:\n" + $d)}]}],
+            generationConfig:{temperature:0.2,maxOutputTokens:500}
           }')"
-
-          echo "Calling Gemini..."
           RESP="$(curl -sS -X POST \
             -H "Content-Type: application/json" \
             "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${GEMINI_API_KEY}" \
             -d "$BODY")"
-
           TEXT="$(echo "$RESP" | jq -r '.candidates[0].content.parts[0].text // empty')"
-
-          if [ -z "$TEXT" ]; then
-            echo "Gemini returned empty response. Full response:"
-            echo "$RESP"
-            exit 1
-          fi
-
-          echo "Posting comment to PR..."
           curl -sS -X POST \
             -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github+json" \
             "https://api.github.com/repos/$REPO/issues/$PR_NUMBER/comments" \
-            -d "$(jq -n --arg body "🤖 **Gemini AI Code Review (Segurança)**\n\n$TEXT" '{body:$body}')"
-
-          echo "Done."
+            -d "$(jq -n --arg body "🤖 Gemini:\n\n$TEXT" '{body:$body}')"
