--- a/.github/workflows/ai_code_review_gemini.yml
+++ b/.github/workflows/ai_code_review_gemini.yml
@@ -26,8 +26,8 @@ jobs:
 
           # 1. Pega o DIFF
           DIFF=$(curl -sS -L \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3.diff" \
+            -H "Authorization: Bearer $GITHUB_TOKEN"\
+            -H "Accept: application/vnd.github.v3.diff"\
             "https://api.github.com/repos/$REPO/pulls/$PR_NUMBER")
 
           # 2. Monta o JSON para o Gemini
@@ -36,10 +36,11 @@ jobs:
             generationConfig:{temperature:0.2,maxOutputTokens:500}
           }')
 
-          # 3. Chamada para a API
+          # 3. Chamada para a API (Formato ALTERNATIVO)
           RESP=$(curl -sS -X POST \
-            -H "Content-Type: application/json" \
-            "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-001:generateContent?key=$GEMINI_API_KEY"\
+            "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent"\
+            -H "Content-Type: application/json"\
+            -H "x-goog-api-key: $GEMINI_API_KEY"\
             -d "$BODY")
 
           # 4. Extrai texto
@@ -56,7 +57,7 @@ jobs:
 
           # 6. Posta o comentário
           curl -sS -X POST \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github+json" \
-            "https://api.github.com/repos/$REPO/issues/$PR_NUMBER/comments" \
+            -H "Authorization: Bearer $GITHUB_TOKEN"\
+            -H "Accept: application/vnd.github+json"\
+            "https://api.github.com/repos/$REPO/issues/$PR_NUMBER/comments"\
             -d "$(jq -n --arg body "🤖 Gemini:\n\n$TEXT" '{body:$body}')"
